--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.3.6"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
