--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "chat-app",
+  "name": "node-ws-test",
   "version": "0.0.1",
-  "description": "public chat app",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku-examples/node-ws-test.git"
+  },
   "dependencies": {
-    "express": "^4.10.2",
-    "socket.io": "^1.3.6"
+    "express": "^4.4.5",
+    "ws": "0.4.x"
   },
   "engines": {
     "node": "0.10.x"
