--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "node-ws-test",
+  "name": "chat-app",
   "version": "0.0.1",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku-examples/node-ws-test.git"
-  },
+  "description": "public chat app",
   "dependencies": {
-    "express": "^4.4.5",
-    "ws": "0.4.x"
+    "express": "^4.10.2",
+    "socket.io": "^1.3.6"
   },
   "engines": {
     "node": "0.10.x"
